# lidarformat

./: .bzrignore  .hgignore  .travis.yml  CMakeLists.txt  ChangeLog  CompilationWindows.md  Dockerfile  HowToCompileOnLinux.md  LidarFormatConfig.cmake.in  LidarFormat_install.cmake  LidarFormat_tests.cmake  ProjectHome.md  README  README.md
cmake/: FindXercesC.cmake  FindXsd.cmake  LidarFormatConfig.cmake.in  LidarFormat_install.cmake  LidarFormat_package.cmake  LidarFormat_plugin_io.cmake  LidarFormat_python_bindings.cmake  LidarFormat_tests.cmake
cmakeContrib/: FindXercesC.cmake  FindXsd.cmake
data/: testAscii-binary.xml  testAscii-new.txt  testAscii-new.xml  testAscii.ply  testAscii.txt  testAscii.xml
data/crop/: points_1.txt  points_1.xml  polygon_1.txt
debian/: changelog  control  rules
doc/: Doxyfile  header.txt
samples/crop/crop_ggl/: CMakeLists.txt  LidarEcho_ggl_adapter.hpp  crop_ggl.cpp
samples/python/: basics.py
src/LidarFormat/: AttributesInfo.h  LidarDataContainer.cpp  LidarDataContainer.h  LidarDataFormatTypes.h  LidarEcho.cpp  LidarEcho.h  LidarFile.cpp  LidarFile.h  LidarFileIO.cpp  LidarFileIO.h  LidarIOFactory.h  LidarIteratorAttribute.h  LidarIteratorEcho.cpp  LidarIteratorEcho.h  LidarIteratorXYZ.h  apply.h
src/LidarFormat/file_formats/: StaticRegisterFormats.cpp  StaticRegisterFormats.h
src/LidarFormat/file_formats/LAS/: Las2Lf.cpp  Las2Lf.h  LasIO.cpp  LasIO.h
src/LidarFormat/file_formats/PlyArchi/: AsciiPLYArchiLidarFileIO.cpp  AsciiPLYArchiLidarFileIO.h  BinaryPLYArchiLidarFileIO.cpp  BinaryPLYArchiLidarFileIO.h  Ply2Lf.cpp  Ply2Lf.h  PlyMetaDataIO.cpp  PlyMetaDataIO.h
src/LidarFormat/file_formats/TerraBin/: TerraBINLidarFileIO.cpp  TerraBINLidarFileIO.h
src/LidarFormat/file_formats/standard/: ASCIILidarFileIO.cpp  ASCIILidarFileIO.h  BinaryLidarFileIO.cpp  BinaryLidarFileIO.h  StandardLidarFileIO.cpp  StandardLidarFileIO.h
src/LidarFormat/geometry/: LidarCenteringTransfo.cpp  LidarCenteringTransfo.h  LidarSpatialIndexation2D.cpp  LidarSpatialIndexation2D.h  RasterSpatialIndexation.cpp  RasterSpatialIndexation.h  RegionOfInterest2D.cpp  RegionOfInterest2D.h
src/LidarFormat/models/xsd/: format_me.xsd
src/LidarFormat/python/: LidarDataContainerFilters.cpp  LidarDataContainerFilters.h  lidar.cpp
src/LidarFormat/tools/: AttributeBounds.cpp  AttributeBounds.h  Factory.hpp  Orientation2D.cpp  Orientation2D.h  UnsortedAssocMap.h
src/doc/: doc.h
tests/: 01_ex_basics.cpp  02_ex_filtering.cpp  bounds.cpp  concepts.cpp  config_data_test.h.cmake.in  convert.cpp  histo.cpp  lfinfo.cpp  unit_tests.cpp
